# 3d-portfolio-backend

./: .dockerignore  .env.local  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  compress_images.py  index.html  script.js  styles.css  tmp_optimize_images.py  vcpkg.json
.github/agents/: 3d-portfolio-backend.agent.md
.github/instructions/: cpp-backend-portfolio.instructions.md
api/: openapi.yaml
data/: models.json
src/: main.cpp
